Fix LaTeX overflow issues

--- a/styles/index.css
+++ b/styles/index.css
@@ -36,6 +36,7 @@ ol {
 
 div.math {
   margin: 1.5em 0;
+  overflow-x: auto;
 }
 
 img {
